# cargo-type

./: Cargo.toml  README.md
src/: main.rs  sentences.rs
