[package]
name = "cli-type"
version = "0.1.0"
edition = "2024"
authors = ["avhidotsol <avhimazumder5@gmail.com>"]
description = "A fast Rust-based terminal typing test"
repository = "https://github.com/AvhiMaz/cargo-type"
readme = "README.md"
keywords = ["typing", "cli", "terminal", "rust"]
categories = ["command-line-utilities"]


[dependencies]
crossterm = "0.27"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }

